# ddp-google-training

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: synthetic_ai_anxiety_data.csv  synthetic_ai_opportunity_data.csv  synthetic_unemployment_compare.csv  synthetic_us_confidence_data.csv  tourism_data_final_clean.csv
docs/: _config.yml  _toc.yml  github-codespaces-setup.md  training.md
docs/images/: Partnership_logo_vertical_color _light_bg .eps
notebooks/: GT_Training_Final.ipynb  GT_Training_Final_Part1.ipynb  GTrends_Tourism_Composite_and_Tourist_Arrivals.ipynb  tourism_indicators_after_processing.csv
