[build-system]
requires = ["hatchling>=1.21.0", "hatch-vcs>=0.3.0"]
build-backend = "hatchling.build"

[project]
name = "ddp-google-training"
description = "A Python project for Development Data Partnership Google Trends training"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["google-trends", "reproducibility"]
authors = [{ name = "Development Data Group", email = "datalab@worldbank.org" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3 :: Only",
	"License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
	"Operating System :: OS Independent",
	"Intended Audience :: Developers",
	"Topic :: Scientific/Engineering",
]
dynamic = ["version"]

requires-python = ">=3.12"
dependencies = [
	"pandas>=2,<3", # capped <3: pandas-datareader 0.10.0 (latest) is incompatible with pandas 3.x
	"numpy",
	"scipy",
	"matplotlib",
	"statsmodels",
	"pandas-datareader",
	"google-api-python-client",
	"huggingface-hub>=1.17.0",
	"pycountry>=22.3.5",
	"requests>=2.28.1",
]
[project.optional-dependencies]
docs = [
	"docutils==0.17.1", # pinned to docutils==0.17.1 due to https://github.com/worldbank/template/issues/60. See also: https://jupyterbook.org/en/stable/content/citations.html?highlight=docutils#citations-and-bibliographies
	"jupyter-book>=1,<2",
]

[project.urls]
"Homepage" = "https://github.com/datapartnership/ddp-google-training"
"Bug Reports" = "https://github.com/datapartnership/ddp-google-training/issues"
"Source" = "https://github.com/datapartnership/ddp-google-training"

[tool.codespell]
skip = 'docs/_build,docs/bibliography.bib,*.png,*.gz,*.whl'
ignore-regex = '^\s*"image\/png":\s.*'
ignore-words-list = "gost,Nd"

[tool.hatch.build.targets.sdist]
include = [
    "src/**/*"
]

[tool.hatch.build.targets.wheel]
packages = ["src/template"]

[tool.hatch.version]
source = "vcs"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "ipykernel",
    "ipython",
    "jupyter",
]
